fix(design): update sign up form colors to sky, hide overflow on home page

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,8 +5,13 @@
 html,
 body,
 #root {
-  /* height: 100vh; */
+  /* height: 100vh;
+  width: 100vw;*/
   font-style: Roboto;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden
 }
 
 
